--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer {
+  :root {
+    --header-height: 4rem;
+  }
+}
+
 .test {
   background-color: #161616; /* 8.6% 100 */
   background-color: #1c1c1c; /* 11% 200 */
